backend/k8s/k8s-flask-deployment.yaml
# k8s-flask-deployment-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8085"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: flask-app
          image: yakinew/inventory-app:1.0.15
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 20
